--- a/hj-react-app/index.html
+++ b/hj-react-app/index.html
@@ -13,10 +13,10 @@
       if ('addEventListener' in document) {
         document.addEventListener(
           'DOMContentLoaded',
-          function() {
+          function () {
             FastClick.attach(document.body)
           },
-          false
+          false,
         )
       }
       if (!window.Promise) {
@@ -25,14 +25,13 @@
             '>' +
             '<' +
             '/' +
-            'script>'
+            'script>',
         )
       }
     </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="module" src="/src/main.tsx"></script>
     <div id="root"></div>
   </body>
 </html>
